--- a/package.json
+++ b/package.json
@@ -28,13 +28,16 @@
     "serve": "^13.0.2",
     "web-vitals": "^1.0.1"
   },
+  "engines": {
+    "node": "14.17.5"
+  },
   "scripts": {
     "dev": "react-scripts start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "yarn run build"
+    "heroku-postbuild": "yarn build"
   },
   "eslintConfig": {
     "extends": [
