--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-react-chart": "^3.0.0-beta.2",
+    "@devexpress/dx-react-chart-bootstrap4": "^3.0.0-beta.2",
+    "@devexpress/dx-react-chart-material-ui": "^3.0.0-beta.2",
     "@devexpress/dx-react-core": "^3.0.0-beta.2",
     "@devexpress/dx-react-scheduler": "^3.0.0-beta.2",
     "@devexpress/dx-react-scheduler-material-ui": "^3.0.0-beta.2",
@@ -18,6 +21,7 @@
     "@testing-library/user-event": "^12.1.10",
     "date-fns": "^2.25.0",
     "dayjs": "^1.10.7",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-csv": "^2.0.3",
